--- a/index.html
+++ b/index.html
@@ -63,11 +63,8 @@
                   近期活動
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
+                  <li><a class="dropdown-item" href="#">情人節活動</a></li>
+                  <li><a class="dropdown-item" href="#">新春好禮送</a></li>
                 </ul>
               </li>
             </ul>
@@ -140,12 +137,11 @@
         </div>
         <div class="aboutTxt col-md8">
           <h2>關於我們</h2>
-          <p id="aboutp">
-            來自對食物無限熱愛的我們，專為您打造每一個甜蜜時刻。</p>
+          <div id="aboutp">
+            <p>來自對食物無限熱愛的我們，專為您打造每一個甜蜜時刻。</p>
             <p>我們的點心不僅是美味的享受，更是安心的保證。</p>
             <p>讓我們帶著創新的靈感，一同走入您的味蕾，感受幸福的拋物線。</p>
-            
-          </p>
+          </div>
         </div>
       </section>
 
